Update Segmenting and Clustering Neighborhoods in Toronto.ipynb

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -75,7 +75,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Wikipedia dataset](Capture.PNG)\n"
+    "![Wikipedia dataset](C:/Users/14379/Desktop/Captue.PNG)
+\n"
    ]
   },
   {
